chore: update supported python versions and project setup

--- a/.ci_tox.ini
+++ b/.ci_tox.ini
@@ -1,7 +1,7 @@
 # This is the configuration file for tox used by CI
 
 [tox]
-envlist = py36, py37, py38, py39, pypy3, pre-commit, coverage, docs
+envlist = py39, py310, py311, py312, py313, py314, pypy3, pre-commit, coverage, docs
 
 [testenv]
 deps = -r{toxinidir}/requirements/corelibs.txt
@@ -15,7 +15,7 @@ deps = pre-commit
 commands = pre-commit run --all-files
 
 [testenv:coverage]
-basepython = python3
+basepython = python3.11
 deps = {[testenv]deps}
        -e{toxinidir}[coverage]
 
@@ -23,7 +23,7 @@ commands =
     pytest --cov --cov-fail-under=100 {posargs}
 
 [testenv:docs]
-basepython = python3
+basepython = python3.11
 deps = -r{toxinidir}/requirements/corelibs.txt
        -e{toxinidir}[docs]
 
@@ -32,13 +32,10 @@ commands = sphinx-build -b doctest doc {envtmpdir}
 
 [gh-actions]
 python =
-    3.6: py36
-    3.7: py37
-    3.8: py38, docs
-    3.9: py39, pre-commit, mypy, coverage
-
-[flake8]
-max-line-length = 88
-ignore =
-    E231  # clashes with black
-    W503
+    3.9: py39
+    3.10: py310
+    3.11: py311, pre-commit, mypy, coverage, docs
+    3.12: py312
+    3.13: py313
+    3.14: py314
+    pypy-3.11: pypy3
