--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 envlist =
-    py36
-    py37
-    py38
     py39
     py310
     py311
+    py312
+    py313
+    py314
     pypy3
     pre-commit
     coverage
@@ -30,29 +30,30 @@ commands = pytest {posargs}
 deps = pre-commit
 commands = pre-commit run --all-files
 
+[testenv:pep8]
+basepython = python3.11
+extras = pep8
+deps = {[src]deps}
+
+commands = flake8 morepath *.py
+           black --check --diff --color .
+           isort --diff .
+
 [testenv:coverage]
-basepython = python3
+basepython = python3.11
 extras = test
          coverage
 
 commands = pytest --cov --cov-fail-under=100 {posargs}
 
 [testenv:docs]
-basepython = python3
+basepython = python3.11
 extras = docs
 deps = {[src]deps}
 
 commands = sphinx-build -b doctest doc {envtmpdir}
 
 [testenv:freeze]
-basepython = python3
+basepython = python3.11
 
 commands = pip freeze
-
-
-[flake8]
-max-line-length = 88
-ignore =
-    E231  # clashes with black
-    W503
-    E203  # clashes with black
