test: filter DeprecationWarning for cgi

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ max-line-length = 89
 
 [tool:pytest]
 testpaths = morepath
+filterwarnings =
+    ignore:'cgi' is deprecated:DeprecationWarning
 
 [coverage:run]
 omit = morepath/tests/*
