--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,32 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   tests:
-    name: "Python ${{ matrix.python-version }}"
+    name: "${{ matrix.tox-env }}  (Python ${{ matrix.python-version }})"
     runs-on: "ubuntu-latest"
-
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14", "pypy-3.11"]
+        include:
+          - tox-env: "py310"
+            python-version: "3.10"
+          - tox-env: "py311"
+            python-version: "3.11"
+          - tox-env: "py312"
+            python-version: "3.12"
+          - tox-env: "py313"
+            python-version: "3.13"
+          - tox-env: "py314"
+            python-version: "3.14"
+          - tox-env: "pypy3"
+            python-version: "pypy-3.11"
+          - tox-env: "coverage"
+            python-version: "3.11"
+          - tox-env: "pre-commit"
+            python-version: "3.11"
+          - tox-env: "lint"
+            python-version: "3.11"
+          - tox-env: "docs"
+            python-version: "3.11"
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -28,19 +48,12 @@ jobs:
       - uses: "actions/setup-python@v6"
         with:
           python-version: "${{ matrix.python-version }}"
-      - name: "Install dependencies"
-        run: |
-          set -xe
-          python -VV
-          python -m site
-          python -m pip install --upgrade pip setuptools wheel
-          python -m pip install --upgrade virtualenv tox tox-gh-actions          
-      - name: "Run tox targets for ${{ matrix.python-version }}"
-        run: "python -m tox -c .ci_tox.ini"
-
+      - name: Install dependencies
+        run: python -m pip install --upgrade pip tox
+      - name: Run tests for ${{ matrix.tox-env }}
+        run: tox -e ${{ matrix.tox-env }}
       - name: "Report to coveralls"
-        # coverage is only created in the py311 environment
-        if: "${{ matrix.python-version }} == '3.11'"
+        if: matrix.tox-env == 'coverage'
         run: |
           pip install coveralls
           coveralls --service=github
