--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,6 @@
-include *.txt *.rst *.cfg *.py *.ini .coveragerc *.toml *.yaml
-exclude .*.cfg
+include *.txt *.rst *.cfg *.py *.toml *.yaml .flake8
 recursive-include morepath *.py *.format
-recursive-include tests *.py
 recursive-include doc *.rst Makefile *.py *.bat *.json *.yml
 recursive-include fixture_packages *.py
 recursive-include requirements *.txt
+recursive-exclude src *.py
