--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = ["setuptools"]
-build-system = ["setuptools.build_meta"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "morepath"
