--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include *.txt *.rst *.cfg *.py *.toml *.yaml .flake8
+include *.txt *.rst *.py *.toml *.yaml .flake8
 recursive-include morepath *.py *.format
 recursive-include doc *.rst Makefile *.py *.bat *.json *.yml
 recursive-include fixture_packages *.py
